package helpdesk.especificacaoservico.domain.servico;

public enum EstadoEspecificacao {

    INCOMPLETO,
    COMPLETO;

    EstadoEspecificacao() {
    }
}
